add stylelint + autofixes

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,33 @@
 {
-  "extends": "stylelint-config-htmlacademy"
+  "customSyntax": "postcss-less",
+  "extends": ["stylelint-config-recommended-less", "stylelint-config-rational-order"],
+  "plugins": ["stylelint-less", "stylelint-order",
+    "stylelint-config-rational-order/plugin"],
+  "rules": {
+    "less/no-duplicate-variables": false,
+    "order/order": [
+      {
+        "type": "rule",
+        "name": "^.",
+        "hasBlock": false
+      },
+      "declarations",
+      {
+        "type": "rule",
+        "selector": "^&::(before|after)"
+      },
+      {
+        "type": "rule",
+        "selector": "^&:\\w"
+      },
+      {
+        "type": "rule",
+        "selector": "^&--"
+      },
+      {
+        "type": "at-rule",
+        "name": "media"
+      }
+    ]
+  }
 }
