--- a/package.json
+++ b/package.json
@@ -25,12 +25,8 @@
     "postcss-csso": "6.0.0",
     "postcss-less": "6.0.0",
     "prettier": "2.5.1",
-    "prettier-stylelint": "0.4.2",
     "stylelint": "^14.5.3",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-recommended-less": "1.0.4",
-    "stylelint-less": "1.0.3",
-    "stylelint-order": "^5.0.0"
+    "stylelint-less": "1.0.3"
   },
   "scripts": {
     "stylelint": "stylelint \"src/less/**/*.less\"",
