--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browser-sync": "2.27.7",
     "csscomb": "^4.3.0",
     "del": "6.0.0",
+    "gh-pages": "^3.2.3",
     "gulp": "4.0.2",
     "gulp-html-bem-validator": "1.0.5",
     "gulp-htmlmin": "5.0.1",
@@ -33,6 +34,7 @@
     "stylelint-fix": "stylelint \"src/less/**/*.less\" --fix",
     "build": "gulp build",
     "start": "gulp",
+    "deploy": "gh-pages -d build",
     "validate": "gulp validate",
     "prettier": "npx prettier --write ."
   },
@@ -43,5 +45,8 @@
     "not op_mini all",
     "not < 0.25%"
   ],
-  "type": "module"
+  "type": "module",
+  "resolutions": {
+    "gift": "0.10.2"
+  }
 }
